--- a/event.html
+++ b/event.html
@@ -10,6 +10,7 @@
     <style>
        .ourContainer {
         width: 220px;
+        height: 100px;
         position: absolute;
         left: 50%;
        transform: translate(-50%);
@@ -36,7 +37,7 @@
         xx.innerHTML=e.x;
 
         ourContainer.style.left=e.x/window.innerWidth *100 + "%"
-       // ourContainer.style.top=e.y/window.innerHeight * 100 + "%"
+        ourContainer.style.top=e.y/window.innerHeight * 100 + "%"
                if (e.x >500) {
            document.body.style.filter="blur(1px)";
         }else {
